--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="<http://www.thymeleaf.org>">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello World</title>
 </head>
@@ -13,7 +13,7 @@
 
 <h2>Users:</h2>
 <ul>
-    <li th:each="user : ${users}" th:text="${user.name}">User name</li>
+    <li th:each="user : ${users}" th:text="${user.memberName}">User name</li>
 </ul>
 </body>
 </html>
